fix(BSP)：keil项目配置

--- a/Bsp/Robomaster_C/MDK-ARM/Robomaster_C.uvprojx
+++ b/Bsp/Robomaster_C/MDK-ARM/Robomaster_C.uvprojx
@@ -627,6 +627,11 @@
               <FileType>8</FileType>
               <FilePath>..\..\..\Devices\Sensors\Sensor.cpp</FilePath>
             </File>
+            <File>
+              <FileName>Propeller.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\Devices\Motors\Propeller.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
