feat(BSP/MC_Board/CMakeLists): 允许使用clion烧录
过滤CMakeCXXCompilerId.o

--- a/BSP/MC_Board/CMakeLists.txt
+++ b/BSP/MC_Board/CMakeLists.txt
@@ -76,6 +76,7 @@ set(CMAKE_EXE_LINKER_FLAGS " \
 
 #*******************************************************************************************#
 # 生成可执行文件
+list(FILTER SOURCES EXCLUDE REGEX ".*CompilerIdCXX.*")
 add_executable(${BOARD_NAME} ${SOURCES} ${LINKER_SCRIPT})
 
 set(HEX_FILE ${CMAKE_BINARY_DIR}/bin/${BOARD_NAME}.hex)
