fix(BSP): 更新HAL库，解决IDLE中断触发后SR寄存器对应位未置零问题

--- a/BSP/MC_Board/MDK-ARM/MC_Board.uvprojx
+++ b/BSP/MC_Board/MDK-ARM/MC_Board.uvprojx
@@ -826,6 +826,11 @@
               <FileType>8</FileType>
               <FilePath>..\..\..\Services\Bus\UART_Base.cpp</FilePath>
             </File>
+            <File>
+              <FileName>UARTBaseLite.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\..\Services\Bus\UARTBaseLite.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
