--- a/BSP/MC_Board/MDK-ARM/MC_Board.uvprojx
+++ b/BSP/MC_Board/MDK-ARM/MC_Board.uvprojx
@@ -10,14 +10,14 @@
       <TargetName>MC_Board</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>6150000::V6.15::ARMCLANG</pCCUsed>
+      <pCCUsed>6230000::V6.23::ARMCLANG</pCCUsed>
       <uAC6>1</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>STM32F446RCTx</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F4xx_DFP.2.14.0</PackID>
-          <PackURL>http://www.keil.com/pack/</PackURL>
+          <PackID>Keil.STM32F4xx_DFP.3.0.0</PackID>
+          <PackURL>https://www.keil.com/pack/</PackURL>
           <Cpu>IRAM(0x20000000-0x2001FFFF) IROM(0x8000000-0x803FFFF)  CLOCK(25000000) FPU2 CPUTYPE("Cortex-M4") TZ</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
@@ -186,6 +186,7 @@
             <RvdsVP>2</RvdsVP>
             <RvdsMve>0</RvdsMve>
             <RvdsCdeCp>0</RvdsCdeCp>
+            <nBranchProt>0</nBranchProt>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -313,7 +314,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>1</Optim>
+            <Optim>6</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -760,6 +761,31 @@
               <FileName>Interface.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\..\Interface\Interface.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Task.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\Interface\Task.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>TaskBeepMusic.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\Interface\Examples\TaskBeepMusic.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>TaskLED.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\Interface\Examples\TaskLED.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>TaskPOVChassis.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\Interface\Examples\TaskPOVChassis.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>UserTask1.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\Interface\UserTasks\UserTask1.cpp</FilePath>
             </File>
           </Files>
         </Group>
