feat(Services): DSHOT协议实现

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,10 @@ set(CMAKE_C_COMPILER armclang.exe)
 set(CMAKE_C_COMPILER_WORKS TRUE)
 set(C_TARGET_FLAG --target=arm-arm-none-eabi)
 
+# 设置编译优化等级 不优化
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
+
 set(CMAKE_CXX_COMPILER armclang.exe)
 set(CMAKE_CXX_COMPILER_WORKS TRUE)
 set(CXX_TARGET_FLAG --target=arm-arm-none-eabi)
