build(BSP): 更新Robomaster_C的HAL库版本
1.28.2

--- a/BSP/Robomaster_C/MDK-ARM/Robomaster_C.uvprojx
+++ b/BSP/Robomaster_C/MDK-ARM/Robomaster_C.uvprojx
@@ -81,7 +81,7 @@
           </BeforeMake>
           <AfterMake>
             <RunUserProg1>0</RunUserProg1>
-            <RunUserProg2>0</RunUserProg2>
+            <RunUserProg2>1</RunUserProg2>
             <UserProg1Name></UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F407xx,__ROBOMASTER_C</Define>
               <Undefine></Undefine>
-              <IncludePath>../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;../Core/Inc;..;..\FineMote_BSP;../../../Interface;../../../Services;../../../Devices;../../../Algorithms;../../../Components;..\..\..\ThirdParty\etl\include</IncludePath>
+              <IncludePath>../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;../Core/Inc;..;../FineMote_BSP;../../../Interface;../../../Services;../../../Devices;../../../Algorithms;../../../Components;../../../ThirdParty/etl/include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
