--- a/BSP/Robomaster_C/CMakeLists.txt
+++ b/BSP/Robomaster_C/CMakeLists.txt
@@ -47,7 +47,7 @@ list(REMOVE_ITEM SOURCES ${EXCLUDE_SRCS})
 
 # BSP宏定义
 string(TOUPPER ${BOARD_NAME} UPPER_BOARD_NAME)
-add_definitions(-DUSE_HAL_DRIVER -D${CHIP_NAME} -D__${UPPER_BOARD_NAME})
+add_definitions(-DUSE_HAL_DRIVER -D${CHIP_NAME} -D__${UPPER_BOARD_NAME} -D__CMAKE_APP)
 
 set(COMPILE_RULE_FLAG "-mcpu=${CMAKE_SYSTEM_PROCESSOR}")
 set(LINKER_TARGET_FLAG "--cpu=${CMAKE_SYSTEM_PROCESSOR}")
