--- a/BSP/MC_Board/MDK-ARM/MC_Board.uvprojx
+++ b/BSP/MC_Board/MDK-ARM/MC_Board.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F446xx,__MC_BOARD,__KEIL_APP</Define>
               <Undefine></Undefine>
-              <IncludePath>../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;../Core/Inc;..;..\FineMote_BSP;../../../Interface;../../../Services;../../../Devices;../../../Algorithms;../../../Components;../../../ThirdParty/etl/include</IncludePath>
+              <IncludePath>../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;../Core/Inc;..;../FineMote_BSP;../../../Interface;../../../Services;../../../Devices;../../../Algorithms;../../../Components;../../../ThirdParty/etl/include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
